tests/snapshots/sdk_conversion_snapshots__gemini__gemini_multi_turn_to_ir.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir.conversation
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What is 2+2?"
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "type": "text",
          "text": "2+2 equals 4."
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What about 3+3?"
        }
      ]
    }
  ]
}
