tests/snapshots/sdk_conversion_snapshots__gemini__gemini_receipt_to_ir_roundtrip.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir
---
{
  "messages": [
    {
      "role": "assistant",
      "content": [
        {
          "type": "text",
          "text": "Hello! I can help with that."
        }
      ]
    }
  ]
}
