tests/snapshots/sdk_conversion_snapshots__gemini__gemini_simple_text_to_ir.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir.conversation
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What is 2+2?"
        }
      ]
    }
  ]
}
