tests/snapshots/sdk_conversion_snapshots__gemini__gemini_system_message_to_ir.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir.conversation
---
{
  "messages": [
    {
      "role": "system",
      "content": [
        {
          "type": "text",
          "text": "You are a pirate. Always respond in pirate speak."
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hello!"
        }
      ]
    }
  ]
}
