tests/snapshots/sdk_conversion_snapshots__gemini__gemini_tool_use_to_ir.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir.conversation
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What's the weather in SF?"
        }
      ]
    }
  ]
}
