tests/snapshots/sdk_conversion_snapshots__gemini__gemini_usage_ir_roundtrip.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: back
---
{
  "promptTokenCount": 100,
  "candidatesTokenCount": 50,
  "totalTokenCount": 150
}
